--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             object-fit: cover;
             cursor: pointer;
             transition: transform 0.1s ease;
+            will-change: transform; /* Добавлено для производительности анимации */
         }
         .shark-gallery {
             margin: 1.2rem 0; /* Увеличим отступ */
@@ -139,6 +140,7 @@
             box-shadow: 0 3px 8px rgba(0,0,0,0.1); /* Мягкая тень */
             flex-shrink: 0;
             transition: transform 0.2s ease;
+            will-change: transform; /* Добавлено для производительности анимации */
         }
         .shark-gallery img:hover {
             transform: scale(1.1);
@@ -367,20 +369,46 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+            // --- Константы ---
+            const DB_URL = "https://tralalero-fec07-default-rtdb.firebaseio.com";
+            const DEFAULT_AVATAR_URL = "https://placehold.co/64x64";
+            const COIN_ICON_URL = "https://sinobu1.github.io/shark-tapper/coin_icon_small.png";
+            const SHARK_DEFAULT_SKIN_URL = "https://sinobu1.github.io/shark-tapper/shark.png";
+            const SHARK_SKIN2_URL = "https://sinobu1.github.io/shark-tapper/shark_skin2.png";
+            const SHARK_SKIN3_URL = "https://sinobu1.github.io/shark-tapper/shark_skin1.png";
+            const LOCAL_STORAGE_KEY = 'sharkTapperData';
+            const SAVE_INTERVAL = 5000;
+            const TAP_VIBRATION_DURATION = 10;
+            const TAP_ANIMATION_DURATION = 100;
+            const TAP_EFFECT_DURATION = 600;
+            const COIN_POPUP_DURATION = 1000;
+            const LEADERBOARD_SIZE = 10;
+            const AUTO_SAVE_INTERVAL = 30000;
+            const XP_LEVEL_LIMITS = [0, 100, 500, 1000, 2500, 5000, 10000];
+
             let userId = null;
             let userData = {
                 username: "Player",
-                avatar: "https://placehold.co/64x64",
+                avatar: DEFAULT_AVATAR_URL,
                 tokens: 0,
                 skin: 'default'
             };
             let lastSave = 0;
-            const SAVE_INTERVAL = 5000;
             let canVibrate = 'vibrate' in navigator;
-            let tapMultiplier = 1; // Временно вернем множитель тапов
+            let tapMultiplier = 1;
 
-            // Initialize app
+            // --- Вспомогательные функции ---
+
+            // Рассчитывает множитель тапов на основе количества токенов
+            function calculateTapMultiplier(tokens) {
+                const max = XP_LEVEL_LIMITS.find(l => tokens < l) || 10000;
+                const level = XP_LEVEL_LIMITS.indexOf(max);
+                return 1 + Math.floor(level / 5);
+            }
+
+            // --- Инициализация ---
+
+            // Инициализация приложения
             function init() {
                 setupEventListeners();
                 loadTelegram(); // Загружаем данные Telegram как можно раньше
@@ -388,20 +416,20 @@
                 showTab('home');
             }
 
-            // Event listeners setup
+            // Настройка слушателей событий
             function setupEventListeners() {
-                // Shark tap
+                // Обработка нажатия на акулу
                 const tapImage = document.getElementById('tapImage');
                 tapImage.addEventListener('click', handleTap);
 
-                // Skin selection
+                // Выбор скина акулы
                 document.querySelectorAll('.shark-gallery img').forEach(img => {
                     img.addEventListener('click', function() {
                         setSkin(this.dataset.skin);
                     });
                 });
 
-                // Navigation
+                // Переключение между вкладками навигации
                 document.querySelectorAll('nav button').forEach(btn => {
                     btn.addEventListener('click', function() {
                         showTab(this.dataset.tab);
@@ -409,26 +437,28 @@
                 });
             }
 
-            // Handle tap on shark
+            // --- Обработчики событий ---
+
+            // Обработка нажатия на акулу
             function handleTap(event) {
-                // Vibrate on tap if supported
+                // Вибрация при нажатии, если поддерживается
                 if (canVibrate) {
-                    navigator.vibrate(10); // Вернули значение вибрации к 10
+                    navigator.vibrate(TAP_VIBRATION_DURATION);
                 }
 
-                // Animation
+                // Анимация нажатия на акулу
                 const shark = document.getElementById("tapImage");
                 shark.style.transform = "scale(0.95)";
-                setTimeout(() => shark.style.transform = "scale(1)", 100);
+                setTimeout(() => shark.style.transform = "scale(1)", TAP_ANIMATION_DURATION);
 
                 createTapEffect(event);
-                createCoinPopup(event, tapMultiplier); // Передаем множитель в функцию
+                createCoinPopup(event, tapMultiplier); // Отображаем всплывающее сообщение с количеством полученных монет
 
-                // Increment coins
+                // Увеличение количества монет
                 userData.tokens += tapMultiplier;
                 updateDisplay();
 
-                // Save progress
+                // Сохранение прогресса
                 const now = Date.now();
                 if (now - lastSave > SAVE_INTERVAL) {
                     saveProgress();
@@ -438,7 +468,7 @@
                 }
             }
 
-            // Create tap visual effect
+            // Создание визуального эффекта нажатия
             function createTapEffect(event) {
                 const effect = document.createElement('div');
                 effect.className = 'tap-effect';
@@ -448,24 +478,26 @@
 
                 setTimeout(() => {
                     effect.remove();
-                }, 600);
+                }, TAP_EFFECT_DURATION);
             }
 
-            // Create coin popup
+            // Создание всплывающего сообщения с монетами
             function createCoinPopup(event, amount) {
                 const popup = document.createElement('div');
                 popup.className = 'coin-popup';
-                popup.innerHTML = `<img src="https://sinobu1.github.io/shark-tapper/coin_icon_small.png" alt="Coin"> +${amount}`;
+                popup.innerHTML = `<img src="${COIN_ICON_URL}" alt="Coin"> +${amount}`;
                 popup.style.left = `${event.clientX}px`;
                 popup.style.top = `${event.clientY - 20}px`;
                 document.body.appendChild(popup);
 
                 setTimeout(() => {
                     popup.remove();
-                }, 1000);
+                }, COIN_POPUP_DURATION);
             }
 
-            // Update UI display
+            // --- Обновление интерфейса ---
+
+            // Обновление отображения UI
             function updateDisplay() {
                 const counter = document.getElementById("profileTokens");
                 if (counter) counter.textContent = userData.tokens;
@@ -475,43 +507,42 @@
 
                 const bar = document.getElementById("xpBar");
                 if (bar) {
-                    const limits = [0, 100, 500, 1000, 2500, 5000, 10000];
-                    let max = limits.find(l => userData.tokens < l) || 10000;
-                    let min = limits[limits.indexOf(max) - 1] || 0;
-                    let percent = ((userData.tokens - min) / (max - min)) * 100;
+                    const max = XP_LEVEL_LIMITS.find(l => userData.tokens < l) || 10000;
+                    const min = XP_LEVEL_LIMITS[XP_LEVEL_LIMITS.indexOf(max) - 1] || 0;
+                    const percent = ((userData.tokens - min) / (max - min)) * 100;
                     bar.style.width = `${Math.min(100, Math.max(0, percent))}%`;
-                    // Временно вернем расчет множителя здесь
-                    const level = limits.indexOf(max);
-                    tapMultiplier = 1 + Math.floor(level / 5);
                 }
+                tapMultiplier = calculateTapMultiplier(userData.tokens); // Обновляем множитель
             }
 
-            // Show tab content
+            // Отображение выбранной вкладки
             function showTab(tabId) {
-                // Update nav buttons
+                // Обновление активного состояния кнопок навигации
                 document.querySelectorAll('nav button').forEach(btn => {
                     btn.classList.toggle('active', btn.dataset.tab === tabId);
                 });
 
-                // Show selected tab
+                // Отображение содержимого выбранной вкладки
                 document.querySelectorAll('.tab-page').forEach(page => {
                     page.classList.toggle('active', page.id === tabId);
                 });
 
-                // Load leaderboard if needed
+                // Загрузка таблицы лидеров при необходимости
                 if (tabId === 'leaderboard') {
                     loadLeaderboard();
                 }
             }
 
-            // Save progress to server and local storage
+            // --- Сохранение и загрузка данных ---
+
+            // Сохранение прогресса на сервере и в локальном хранилище
             function saveProgress() {
                 if (!userId) {
                     saveToLocalStorage();
                     return;
                 }
 
-                fetch(`${dbUrl}/users/${userId}.json`, {
+                fetch(`${DB_URL}/users/${userId}.json`, {
                     method: "PUT",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
@@ -524,14 +555,14 @@
                 })
                 .then(() => saveToLocalStorage())
                 .catch(err => {
-                    console.error('Save error:', err);
+                    console.error('Ошибка сохранения:', err);
                     saveToLocalStorage();
                 });
             }
 
-            // Load from local storage
+            // Загрузка данных из локального хранилища
             function initLocalStorage() {
-                const savedData = localStorage.getItem('sharkTapperData');
+                const savedData = localStorage.getItem(LOCAL_STORAGE_KEY);
                 if (savedData) {
                     try {
                         const parsed = JSON.parse(savedData);
@@ -540,57 +571,59 @@
                         updateDisplay();
                         setSkin(userData.skin, true);
                     } catch (e) {
-                        console.error('Error parsing saved data', e);
+                        console.error('Ошибка при парсинге сохраненных данных', e);
                     }
                 }
             }
 
-            // Save to local storage
+            // Сохранение данных в локальное хранилище
             function saveToLocalStorage() {
-                localStorage.setItem('sharkTapperData', JSON.stringify({
+                localStorage.setItem(LOCAL_STORAGE_KEY, JSON.stringify({
                     tokens: userData.tokens,
                     skin: userData.skin
                 }));
             }
 
-            // Load progress from server
+            // Загрузка прогресса с сервера
             function loadProgress() {
                 if (!userId) return;
 
-                fetch(`${dbUrl}/users/${userId}.json`)
+                fetch(`${DB_URL}/users/${userId}.json`)
                     .then(res => {
                         if (!res.ok) throw new Error('Network response was not ok');
                         return res.json();
                     })
                     .then(data => {
                         if (data) {
-                            // Use highest value between server and local
+                            // Используем большее значение между сервером и локальным хранилищем
                             const serverTokens = data.balance || 0;
                             userData.tokens = Math.max(serverTokens, userData.tokens);
 
-                            // Update user data
+                            // Обновление данных пользователя
                             userData.username = data.first_name || "Player";
-                            userData.avatar = data.photo_url || "https://placehold.co/64x64";
+                            userData.avatar = data.photo_url || DEFAULT_AVATAR_URL;
                             userData.skin = data.skin || 'default';
 
-                            // Update UI
+                            // Обновление UI
                             updateDisplay();
                             document.getElementById("profileName").textContent = userData.username;
                             document.getElementById("profileAvatar").src = userData.avatar;
                             setSkin(userData.skin, true);
 
-                            // Save merged data
+                            // Сохранение объединенных данных
                             saveToLocalStorage();
                         }
                     })
                     .catch(err => {
-                        console.error('Load error:', err);
+                        console.error('Ошибка загрузки:', err);
                     });
             }
 
-            // Load leaderboard
+            // --- Таблица лидеров ---
+
+            // Загрузка таблицы лидеров
             function loadLeaderboard() {
-                fetch(`${dbUrl}/users.json`)
+                fetch(`${DB_URL}/users.json`)
                     .then(res => {
                         if (!res.ok) throw new Error('Network response was not ok');
                         return res.json();
@@ -598,24 +631,24 @@
                     .then(data => {
                         const list = document.getElementById("leaderboardList");
                         if (!data || Object.keys(data).length === 0) {
-                            return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">No players yet</li>';
+                            return list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Пока нет игроков</li>';
                         }
 
-                        // Sort by balance
+                        // Сортировка по балансу и выбор топ-10
                         const sorted = Object.entries(data)
                             .sort((a, b) => (b[1].balance || 0) - (a[1].balance || 0))
-                            .slice(0, 10);
+                            .slice(0, LEADERBOARD_SIZE);
 
                         renderLeaderboard(sorted);
                     })
                     .catch(err => {
-                        console.error('Leaderboard error:', err);
+                        console.error('Ошибка загрузки таблицы лидеров:', err);
                         const list = document.getElementById("leaderboardList");
-                        list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Loading error</li>';
+                        list.innerHTML = '<li style="text-align:center; color: var(--subtext);">Ошибка загрузки</li>';
                     });
             }
 
-            // Render leaderboard
+            // Отрисовка таблицы лидеров
             function renderLeaderboard(data) {
                 const list = document.getElementById("leaderboardList");
                 list.innerHTML = data.map(([id, user], i) => {
@@ -623,7 +656,7 @@
                     return `
                         <li class="leaderboard-item ${isCurrentUser ? 'current-user' : ''}">
                             <span style="font-weight: bold; color: var(--primary); width: 24px; text-align: center;">#${i + 1}</span>
-                            <img src="${user.photo_url || 'https://placehold.co/32x32'}"
+                            <img src="${user.photo_url || DEFAULT_AVATAR_URL}"
                                  style="width: 32px; height: 32px; border-radius: 50%; border: 2px solid var(--accent); object-fit: cover;">
                             <span style="flex: 1; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
                                 ${user.first_name || 'Player'}
@@ -635,12 +668,14 @@
                 }).join("");
             }
 
-            // Set shark skin
+            // --- Скины ---
+
+            // Установка скина акулы
             function setSkin(skin, silent = false) {
                 const skins = {
-                    'default': 'https://sinobu1.github.io/shark-tapper/shark.png',
-                    'skin2': 'https://sinobu1.github.io/shark-tapper/shark_skin2.png',
-                    'skin3': 'https://sinobu1.github.io/shark-tapper/shark_skin1.png'
+                    'default': SHARK_DEFAULT_SKIN_URL,
+                    'skin2': SHARK_SKIN2_URL,
+                    'skin3': SHARK_SKIN3_URL
                 };
 
                 if (skins[skin]) {
@@ -650,13 +685,15 @@
                 }
             }
 
-            // Load Telegram user data
+            // --- Интеграция с Telegram Web Apps ---
+
+            // Загрузка данных пользователя Telegram
             function loadTelegram() {
                 const tgUser = Telegram?.WebApp?.initDataUnsafe?.user;
                 if (tgUser) {
                     userId = tgUser.id?.toString();
                     userData.username = tgUser.first_name || "Player";
-                    userData.avatar = tgUser.photo_url || "https://placehold.co/64x64";
+                    userData.avatar = tgUser.photo_url || DEFAULT_AVATAR_URL;
                     document.getElementById("profileName").textContent = userData.username;
                     document.getElementById("profileAvatar").src = userData.avatar;
                     loadProgress();
@@ -667,14 +704,16 @@
                 }
             }
 
-            // Auto-save every 30 seconds
+            // --- Автоматическое сохранение ---
+
+            // Автоматическое сохранение каждые 30 секунд
             setInterval(() => {
                 if (userData.tokens > 0) {
                     saveProgress();
                 }
-            }, 30000);
+            }, AUTO_SAVE_INTERVAL);
 
-            // Initialize the app
+            // --- Запуск приложения ---
             init();
         });
     </script>
