--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <div class="shark-tap-container">
                             <div class="token-counter" id="tokenCounter">
                                 <img src="https://sinobu1.github.io/shark-tapper/coin_icon_small.png" alt="Coin Icon" class="coin-icon" />
-                                <span id="profileTokens">0</span> <span style="font-family: 'Luckiest Guy', cursive;">coins</span>
+                                <span id="profileTokens">0</span>
                             </div>
                             <img src="https://sinobu1.github.io/shark-tapper/shark.png" alt="Tap Shark" class="shark-image" id="tapImage" />
                         </div>
